[boxes] closes #1832844: translate views category in possible views boxes

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -1157,6 +1157,9 @@ msgstr ""
 msgid "anonymous"
 msgstr ""
 
+msgid "anyrsetview"
+msgstr "rset views"
+
 msgid "april"
 msgstr ""
 
@@ -2274,6 +2277,9 @@ msgstr ""
 
 msgid "entity update"
 msgstr ""
+
+msgid "entityview"
+msgstr "entity views"
 
 msgid "error"
 msgstr ""
@@ -3658,6 +3664,9 @@ msgstr ""
 
 msgid "startup views"
 msgstr ""
+
+msgid "startupview"
+msgstr "startup views"
 
 msgid "state"
 msgstr ""
