--- a/i18n/de.po
+++ b/i18n/de.po
@@ -1200,6 +1200,9 @@ msgstr "und/oder zwischen verschiedenen Werten"
 msgid "anonymous"
 msgstr "anonym"
 
+msgid "anyrsetview"
+msgstr ""
+
 msgid "april"
 msgstr "April"
 
@@ -2330,6 +2333,9 @@ msgstr "Entitätstypen, die diesen Workflow benutzen können."
 
 msgid "entity update"
 msgstr "Aktualisierung der Entität"
+
+msgid "entityview"
+msgstr ""
 
 msgid "error"
 msgstr ""
@@ -3758,6 +3764,9 @@ msgstr ""
 
 msgid "startup views"
 msgstr "Start-Ansichten"
+
+msgid "startupview"
+msgstr ""
 
 msgid "state"
 msgstr "Zustand"
