[doc] fix ReST in README file (make pypi happier)

--- a/README
+++ b/README
@@ -5,20 +5,21 @@ CubicWeb is a entities / relations based knowledge management system
 developped at Logilab.
 
 This package contains:
-* a repository server
-* a RQL command line client to the repository
-* an adaptative modpython interface to the server
-* a bunch of other management tools
+
+- a repository server
+- a RQL command line client to the repository
+- an adaptative modpython interface to the server
+- a bunch of other management tools
 
 Install
 -------
 
-More details at http://www.cubicweb.org/doc/en/admin/setup
+More details at http://docs.cubicweb.org/admin/setup
 
 Getting started
 ---------------
 
-Execute:
+Execute::
 
  apt-get install cubicweb cubicweb-dev cubicweb-blog
  cubicweb-ctl create blog myblog
