--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -164,7 +164,7 @@ msgstr "l'action '%s' ne prend pas d'option"
 #, python-format
 msgid ""
 "'%s' action for in_state relation should at least have 'linkattr=name' option"
-msgstr ""
+msgstr "l'action '%s' pour la relation in_state doit au moins avoir l'option 'linkattr=name'"
 
 #, python-format
 msgid "'%s' action requires 'linkattr' option"
@@ -1174,7 +1174,7 @@ msgstr "transitions autorisées depuis cet état"
 
 #, python-format
 msgid "allowed values for \"action\" are %s"
-msgstr ""
+msgstr "les valeurs autorisées pour \"action\" sont %s"
 
 msgid "allowed_transition"
 msgstr "transitions autorisées"
@@ -1258,6 +1258,9 @@ msgstr "Identifiant ou mot de passe incorrect"
 
 msgid "auto"
 msgstr "automatique"
+
+msgid "autocomputed attribute used to ensure transition coherency"
+msgstr "attribut calculé automatiquement pour assurer la cohérence de la transition"
 
 msgid "automatic"
 msgstr "automatique"
@@ -2326,9 +2329,6 @@ msgstr "table éditable"
 msgid "eid"
 msgstr "eid"
 
-msgid "email address to use for notification"
-msgstr "adresse email à utiliser pour la notification"
-
 msgid "emails successfully sent"
 msgstr "courriels envoyés avec succès"
 
@@ -2659,6 +2659,18 @@ msgstr ""
 
 msgid "groups"
 msgstr "groupes"
+
+msgid "groups allowed to add entities/relations of this type"
+msgstr "groupes autorisés à ajouter des entités/relations de ce type"
+
+msgid "groups allowed to delete entities/relations of this type"
+msgstr "groupes autorisés à supprimer des entités/relations de ce type"
+
+msgid "groups allowed to read entities/relations of this type"
+msgstr "groupes autorisés à lire des entités/relations de ce type"
+
+msgid "groups allowed to update entities/relations of this type"
+msgstr "groupes autorisés à mettre à jour des entités/relations de ce type"
 
 msgid "groups grant permissions to the user"
 msgstr "les groupes donnent des permissions à l'utilisateur"
@@ -3239,10 +3251,10 @@ msgid "no associated permissions"
 msgstr "aucune permission associée"
 
 msgid "no content next link"
-msgstr ""
+msgstr "pas de lien 'suivant'"
 
 msgid "no content prev link"
-msgstr ""
+msgstr "pas de lien 'précédent'"
 
 msgid "no edited fields specified"
 msgstr "aucun champ à éditer spécifié"
@@ -3655,6 +3667,18 @@ msgstr "annuler les changements"
 msgid "right"
 msgstr "droite"
 
+msgid "rql expression allowing to add entities/relations of this type"
+msgstr "expression rql autorisant à ajouter des entités/relations de ce type"
+
+msgid "rql expression allowing to delete entities/relations of this type"
+msgstr "expression rql autorisant à supprimer des entités/relations de ce type"
+
+msgid "rql expression allowing to read entities/relations of this type"
+msgstr "expression rql autorisant à lire des entités/relations de ce type"
+
+msgid "rql expression allowing to update entities/relations of this type"
+msgstr "expression rql autorisant à mettre à jour des entités/relations de ce type"
+
 msgid "rql expressions"
 msgstr "conditions rql"
 
@@ -4013,10 +4037,10 @@ msgid "the value \"%s\" is already used, use another one"
 msgstr "la valeur \"%s\" est déjà utilisée, veuillez utiliser une autre valeur"
 
 msgid "there is no next page"
-msgstr ""
+msgstr "il n'y a pas de page suivante"
 
 msgid "there is no previous page"
-msgstr ""
+msgstr "il n'y a pas de page précédente"
 
 msgid "this action is not reversible!"
 msgstr ""
@@ -4372,6 +4396,9 @@ msgstr "encodage utilisé dans l'interface utilisateur"
 msgid "user preferences"
 msgstr "préférences utilisateur"
 
+msgid "user's email account"
+msgstr "email de l'utilisateur"
+
 msgid "users"
 msgstr "utilisateurs"
 
@@ -4572,7 +4599,3 @@ msgid "you should un-inline relation %s which is supported and may be crossed "
 msgstr ""
 "vous devriez enlevé la mise en ligne de la relation %s qui est supportée et "
 "peut-être croisée"
-
-#~ msgctxt "CWAttribute"
-#~ msgid "cw_schema_object"
-#~ msgstr "mappé par"
