--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cubicweb (3.13.4-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Sylvain Thénault <sylvain.thenault@logilab.fr>  Fri, 05 Aug 2011 12:22:11 +0200
+
 cubicweb (3.13.3-1) unstable; urgency=low
 
   * new upstream release
