[i18n] cleanup messages moved to localperms cube

--- a/i18n/de.po
+++ b/i18n/de.po
@@ -341,12 +341,6 @@ msgstr "Gruppe"
 msgid "CWGroup_plural"
 msgstr "Gruppen"
 
-msgid "CWPermission"
-msgstr "Berechtigung"
-
-msgid "CWPermission_plural"
-msgstr "Berechtigungen"
-
 msgid "CWProperty"
 msgstr "Eigenschaft"
 
@@ -579,9 +573,6 @@ msgstr "Neuer Entitätstyp"
 msgid "New CWGroup"
 msgstr "Neue Gruppe"
 
-msgid "New CWPermission"
-msgstr "Neue Berechtigung"
-
 msgid "New CWProperty"
 msgstr "Neue Eigenschaft"
 
@@ -804,9 +795,6 @@ msgstr "Dieser Entitätstyp"
 msgid "This CWGroup"
 msgstr "Diese Gruppe"
 
-msgid "This CWPermission"
-msgstr "Diese Berechtigung"
-
 msgid "This CWProperty"
 msgstr "Diese Eigenschaft"
 
@@ -954,7 +942,7 @@ msgstr "[%s supervision] Beschreibung der Änderungen"
 msgid ""
 "a RQL expression which should return some results, else the transition won't "
 "be available. This query may use X and U variables that will respectivly "
-"represents the current entity and the current user"
+"represents the current entity and the current user."
 msgstr ""
 "ein RQL-Ausdruck, der einige Treffer liefern sollte, sonst wird der Übergang "
 "nicht verfügbar sein. Diese Abfrage kann X und U Variable benutzen, die "
@@ -1102,9 +1090,6 @@ msgstr ""
 msgctxt "inlined:CWUser.use_email.subject"
 msgid "add a EmailAddress"
 msgstr "Email-Adresse hinzufügen"
-
-msgid "add a new permission"
-msgstr "eine Berechtigung hinzufügen"
 
 # subject and object forms for each relation type
 # (no object form for final relation types)
@@ -2095,9 +2080,6 @@ msgstr "löschen"
 msgid "delete this bookmark"
 msgstr "dieses Lesezeichen löschen"
 
-msgid "delete this permission"
-msgstr "dieses Recht löschen"
-
 msgid "delete this relation"
 msgstr "diese Relation löschen"
 
@@ -2271,13 +2253,6 @@ msgstr "die Komponente anzeigen oder nicht"
 msgid "display the facet or not"
 msgstr "die Facette anzeigen oder nicht"
 
-msgid ""
-"distinct label to distinguate between other permission entity of the same "
-"name"
-msgstr ""
-"Zusätzliches Label, um von anderen Berechtigungsentitäten unterscheiden zu "
-"können."
-
 msgid "download"
 msgstr "Herunterladen"
 
@@ -2347,12 +2322,6 @@ msgstr "Entität verknüpft"
 
 msgid "entity type"
 msgstr "Entitätstyp"
-
-msgid ""
-"entity type that may be used to construct some advanced security "
-"configuration"
-msgstr ""
-"Entitätstyp zum Aufbau einer fortgeschrittenen Sicherheitskonfiguration."
 
 msgid "entity types which may use this workflow"
 msgstr "Entitätstypen, die diesen Workflow benutzen können."
@@ -2646,9 +2615,6 @@ msgstr ""
 msgid "groups grant permissions to the user"
 msgstr "die Gruppen geben dem Nutzer Rechte"
 
-msgid "groups to which the permission is granted"
-msgstr "Gruppen, denen dieses Recht verliehen ist"
-
 msgid "guests"
 msgstr "Gäste"
 
@@ -2905,13 +2871,6 @@ msgstr "Juli"
 msgid "june"
 msgstr "Juni"
 
-msgid "label"
-msgstr "gekennzeichnet"
-
-msgctxt "CWPermission"
-msgid "label"
-msgstr "gekennzeichnet"
-
 msgid "language of the user interface"
 msgstr "Sprache der Nutzer-Schnittstelle"
 
@@ -2952,14 +2911,6 @@ msgstr ""
 
 msgid "left"
 msgstr "links"
-
-msgid ""
-"link a permission to the entity. This permission should be used in the "
-"security definition of the entity's type to be useful."
-msgstr ""
-"verknüpft eine Berechtigung mit einer Entität. Um Nützlich zu sein, sollte "
-"diese Berechtigung in der Sicherheitsdefinition des Entitätstyps benutzt "
-"werden."
 
 msgid ""
 "link a property to the user which want this property customization. Unless "
@@ -3136,10 +3087,6 @@ msgctxt "CWGroup"
 msgid "name"
 msgstr "Name"
 
-msgctxt "CWPermission"
-msgid "name"
-msgstr "Name"
-
 msgctxt "CWRType"
 msgid "name"
 msgstr "Name"
@@ -3177,9 +3124,6 @@ msgstr ""
 msgid "name of the source"
 msgstr ""
 
-msgid "name or identifier of the permission"
-msgstr "Name (oder Bezeichner) der Berechtigung"
-
 msgid "navbottom"
 msgstr "zum Seitenende"
 
@@ -3215,9 +3159,6 @@ msgstr "weitere Ergebnisse"
 
 msgid "no"
 msgstr "Nein"
-
-msgid "no associated permissions"
-msgstr "keine entsprechende Berechtigung"
 
 msgid "no content next link"
 msgstr ""
@@ -3368,9 +3309,6 @@ msgstr "Recht"
 
 msgid "permissions"
 msgstr "Rechte"
-
-msgid "permissions for this entity"
-msgstr "Rechte für diese Entität"
 
 msgid "pick existing bookmarks"
 msgstr "Wählen Sie aus den bestehenden lesezeichen aus"
@@ -3569,10 +3507,6 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "auf Gruppe beschränkt"
 
-msgctxt "CWPermission"
-msgid "require_group"
-msgstr "auf Gruppe beschränkt"
-
 msgctxt "Transition"
 msgid "require_group"
 msgstr "auf Gruppe beschränkt"
@@ -3587,12 +3521,6 @@ msgstr "hat die Rechte"
 msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "hat die Rechte"
-
-msgid "require_permission"
-msgstr "erfordert Berechtigung"
-
-msgid "require_permission_object"
-msgstr "Berechtigung von"
 
 msgid "required"
 msgstr "erforderlich"
@@ -4285,9 +4213,6 @@ msgctxt "CWSource"
 msgid "url"
 msgstr ""
 
-msgid "use template languages"
-msgstr "Verwenden Sie Templating-Sprachen"
-
 msgid ""
 "use to define a transition from one or multiple states to a destination "
 "states in workflow's definitions. Transition without destination state will "
@@ -4311,9 +4236,6 @@ msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "verwendet von"
 
-msgid "use_template_format"
-msgstr "Benutzung des 'cubicweb template'-Formats"
-
 msgid ""
 "used for cubicweb configuration. Once a property has been created you can't "
 "change the key."
@@ -4326,9 +4248,6 @@ msgid ""
 msgstr ""
 "assoziiert einfache Zustände mit einem Entitätstyp und/oder definiert "
 "Workflows"
-
-msgid "used to grant a permission to a group"
-msgstr "gibt einer Gruppe eine Berechtigung"
 
 msgid "user"
 msgstr "Nutzer"
@@ -4548,6 +4467,3 @@ msgstr "Sie sollten diese Eigenschaft wahrscheinlich löschen."
 #, python-format
 msgid "you should un-inline relation %s which is supported and may be crossed "
 msgstr ""
-
-#~ msgid "email address to use for notification"
-#~ msgstr "E-Mail-Adresse für Mitteilungen."
