--- a/i18n/es.po
+++ b/i18n/es.po
@@ -342,12 +342,6 @@ msgstr "Groupo"
 msgid "CWGroup_plural"
 msgstr "Grupos"
 
-msgid "CWPermission"
-msgstr "Autorización"
-
-msgid "CWPermission_plural"
-msgstr "Autorizaciones"
-
 msgid "CWProperty"
 msgstr "Propiedad"
 
@@ -579,9 +573,6 @@ msgstr "Agregar tipo de entidad"
 msgid "New CWGroup"
 msgstr "Nuevo grupo"
 
-msgid "New CWPermission"
-msgstr "Agregar autorización"
-
 msgid "New CWProperty"
 msgstr "Agregar Propiedad"
 
@@ -805,9 +796,6 @@ msgstr "Este tipo de Entidad"
 msgid "This CWGroup"
 msgstr "Este grupo"
 
-msgid "This CWPermission"
-msgstr "Este permiso"
-
 msgid "This CWProperty"
 msgstr "Esta propiedad"
 
@@ -959,7 +947,7 @@ msgstr "[%s supervision] descripción de cambios"
 msgid ""
 "a RQL expression which should return some results, else the transition won't "
 "be available. This query may use X and U variables that will respectivly "
-"represents the current entity and the current user"
+"represents the current entity and the current user."
 msgstr ""
 "una expresión RQL que debe haber enviado resultados, para que la transición "
 "pueda ser realizada. Esta expresión puede utilizar las variables X y U que "
@@ -1112,9 +1100,6 @@ msgstr "agregar una parte de mapeo"
 msgctxt "inlined:CWUser.use_email.subject"
 msgid "add a EmailAddress"
 msgstr "Agregar correo electrónico"
-
-msgid "add a new permission"
-msgstr "Agregar una autorización"
 
 # subject and object forms for each relation type
 # (no object form for final relation types)
@@ -2131,9 +2116,6 @@ msgstr "Eliminar"
 msgid "delete this bookmark"
 msgstr "Eliminar este favorito"
 
-msgid "delete this permission"
-msgstr "Eliminar esta autorización"
-
 msgid "delete this relation"
 msgstr "Eliminar esta relación"
 
@@ -2310,13 +2292,6 @@ msgstr "Mostrar o no el componente"
 msgid "display the facet or not"
 msgstr "Mostrar o no la faceta"
 
-msgid ""
-"distinct label to distinguate between other permission entity of the same "
-"name"
-msgstr ""
-"Etiqueta que permite distinguir esta autorización de otras que posean el "
-"mismo nombre"
-
 msgid "download"
 msgstr "Descargar"
 
@@ -2388,13 +2363,6 @@ msgstr "Entidad asociada"
 
 msgid "entity type"
 msgstr "Tipo de entidad"
-
-msgid ""
-"entity type that may be used to construct some advanced security "
-"configuration"
-msgstr ""
-"Tipo de entidad utilizada para definir una configuración de seguridad "
-"avanzada"
 
 msgid "entity types which may use this workflow"
 msgstr "Tipos de entidades que pueden utilizar este Workflow"
@@ -2688,9 +2656,6 @@ msgstr ""
 msgid "groups grant permissions to the user"
 msgstr "Los grupos otorgan los permisos al usuario"
 
-msgid "groups to which the permission is granted"
-msgstr "Grupos quienes tienen otorgada esta autorización"
-
 msgid "guests"
 msgstr "Invitados"
 
@@ -2948,13 +2913,6 @@ msgstr "Julio"
 msgid "june"
 msgstr "Junio"
 
-msgid "label"
-msgstr "Etiqueta"
-
-msgctxt "CWPermission"
-msgid "label"
-msgstr "Etiqueta"
-
 msgid "language of the user interface"
 msgstr "Idioma que se utilizará por defecto en la interfaz usuario"
 
@@ -2995,13 +2953,6 @@ msgstr "fecha de la última sincronización de la fuente"
 
 msgid "left"
 msgstr "izquierda"
-
-msgid ""
-"link a permission to the entity. This permission should be used in the "
-"security definition of the entity's type to be useful."
-msgstr ""
-"Relacionar un permiso con la entidad. Este permiso debe ser integrado en la "
-"definición de seguridad de la entidad para poder ser utilizado."
 
 msgid ""
 "link a property to the user which want this property customization. Unless "
@@ -3177,10 +3128,6 @@ msgctxt "CWGroup"
 msgid "name"
 msgstr "Nombre"
 
-msgctxt "CWPermission"
-msgid "name"
-msgstr "Nombre"
-
 msgctxt "CWRType"
 msgid "name"
 msgstr "Nombre"
@@ -3218,9 +3165,6 @@ msgstr ""
 msgid "name of the source"
 msgstr "nombre de la fuente"
 
-msgid "name or identifier of the permission"
-msgstr "Nombre o identificador del permiso"
-
 msgid "navbottom"
 msgstr "Pie de página"
 
@@ -3256,9 +3200,6 @@ msgstr "Siguientes resultados"
 
 msgid "no"
 msgstr "No"
-
-msgid "no associated permissions"
-msgstr "No existe permiso asociado"
 
 msgid "no content next link"
 msgstr ""
@@ -3409,9 +3350,6 @@ msgstr "Permiso"
 
 msgid "permissions"
 msgstr "Permisos"
-
-msgid "permissions for this entity"
-msgstr "Permisos para esta entidad"
 
 msgid "pick existing bookmarks"
 msgstr "Seleccionar favoritos existentes"
@@ -3618,10 +3556,6 @@ msgctxt "BaseTransition"
 msgid "require_group"
 msgstr "Restringida al Grupo"
 
-msgctxt "CWPermission"
-msgid "require_group"
-msgstr "Restringida al Grupo"
-
 msgctxt "Transition"
 msgid "require_group"
 msgstr "Restringida al Grupo"
@@ -3636,12 +3570,6 @@ msgstr "Posee derechos sobre"
 msgctxt "CWGroup"
 msgid "require_group_object"
 msgstr "Posee derechos sobre"
-
-msgid "require_permission"
-msgstr "Requiere Permisos"
-
-msgid "require_permission_object"
-msgstr "Requerido por autorización"
 
 msgid "required"
 msgstr "Requerido"
@@ -4335,9 +4263,6 @@ msgctxt "CWSource"
 msgid "url"
 msgstr "url"
 
-msgid "use template languages"
-msgstr "Utilizar plantillas de lenguaje"
-
 msgid ""
 "use to define a transition from one or multiple states to a destination "
 "states in workflow's definitions. Transition without destination state will "
@@ -4361,9 +4286,6 @@ msgctxt "EmailAddress"
 msgid "use_email_object"
 msgstr "Utilizado por"
 
-msgid "use_template_format"
-msgstr "Utilización del formato 'cubicweb template'"
-
 msgid ""
 "used for cubicweb configuration. Once a property has been created you can't "
 "change the key."
@@ -4376,9 +4298,6 @@ msgid ""
 msgstr ""
 "Se utiliza para asociar estados simples a un tipo de entidad y/o para "
 "definir Workflows"
-
-msgid "used to grant a permission to a group"
-msgstr "Se utiliza para otorgar permisos a un grupo"
 
 msgid "user"
 msgstr "Usuario"
@@ -4599,10 +4518,3 @@ msgid "you should un-inline relation %s which is supported and may be crossed "
 msgstr ""
 "usted debe  quitar la puesta en línea de la relación %s que es aceptada y "
 "puede ser cruzada"
-
-#~ msgctxt "CWAttribute"
-#~ msgid "cw_schema_object"
-#~ msgstr "mapeado por"
-
-#~ msgid "email address to use for notification"
-#~ msgstr "Dirección electrónica a utilizarse para notificar"
